// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link changes the class when hovered 1`] = `
<a
  className="normal"
  href="http://www.xinhehui.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  xinhehui
</a>
`;

exports[`Link changes the class when hovered 2`] = `
<a
  className="hovered"
  href="http://www.xinhehui.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  xinhehui
</a>
`;

exports[`Link changes the class when hovered 3`] = `
<a
  className="normal"
  href="http://www.xinhehui.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  xinhehui
</a>
`;
